# auth-api-template

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py
app/api/: dependencies.py  main.py
app/api/middleware/: auth.py
app/api/v1/: auth.py  health.py
app/cmd/: db.py  main.py
app/infra/db/: conn.py
app/infra/db/migrations/: env.py
app/infra/db/migrations/versions/: 5e3355ebedd2_add_user.py  d9e9ff0ca69b_auth.py
app/models/: base.py  models.py
app/repositories/: user.py
app/schema/: user.py
app/services/: auth.py  user.py
