[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.122.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "ruff>=0.14.3",
    "sqlalchemy[asyncio]>=2.0.44",
    "uv-build>=0.9.6",
    "uvicorn>=0.38.0",
]

[project.scripts]
dev = "app.cmd.main:run"
db-reset = "app.cmd.db:reset"
db-migrate = "app.cmd.db:migrate"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
